# mes-bots-finance

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  00_HANDOFF_MASTER.md  AMELIORATIONS_ET_IDEES.md  ARCHITECTURE.md  AUDIT_2026-05-12_marathon.md  CALIBRATION_DOCTRINE.md  CLAUDE.md  CONVENTIONS.md  FICHE_TECHNIQUE.md  HANDOFF.md  HANDOFF_CYCLE_CALIBRATOR.md  HANDOFF_SOCLE.md  IDEAS_BACKLOG.md  KPI_DASHBOARD.md  METHODE_CALIBRATION_CORNERSTONE.md  Makefile  OPERATIONAL_READINESS.md  PHILOSOPHY.md  PLAN_ACQUIHIRE.md  PLAN_REFONTE_ALERTES.md  PROCEDURE_QUOTIDIENNE.md  PROCEDURE_URGENCE.md  QUALITY_BAR.md  README.md  SCALE_VISION.md  SESSION_STATE.md  SPEC_ALERT_VOCABULARY.md  SPEC_CONSENSUS_FRAGILITE.md  SPEC_CONSENSUS_MICRO.md  SPEC_CORNERSTONE.md  SPEC_GAUGE.md  SPEC_GAUGE_PRICE_AXIS.md  SPEC_LEDGER.md  SPEC_LIVING_GRAPH.md  SPEC_MONEY_INVARIANT.md  SPEC_POSITIONS_CARD_LINK.md  SPEC_SECTOR_TAXONOMY.md  (+15 more)
.claude/: settings.json
baselines/: sprint-1.1-chunk-0.json  sprint-1.1-chunk-1.json
bot/: jobs.py  main.py  main.py.bak.preTierA  registry.py
config/: alert_vocabulary.yaml  broker_positions.yaml  calibration.yaml  concept_keys.yaml  divergence.yaml  freshness.yaml  portfolio_rules.yaml  presage_macro_stress.yaml  presage_taxonomy.yaml  risk_watch.yaml  sector_profiles.yaml  sectors.yaml  target_allocation.yaml
crons/: README.md  daily_backup.sh  j_day_preflight_notify.sh  j_day_watcher.sh  resolve_predictions.sh  uptime_monitor.sh
dashboard/: _scripts.py  _styles.py  cahier_de_bord.css  charts.py  chat.py  render.py  restitution.py  serve.py  tokens.css
data/: bot.db.pre_alembic_20260514_094730  bot_state.json
data_sources/: gmail_.py
deploy/: PROVISION.md  env.example  heimdall-bot.service  heimdall-serve.service  presage-backup.service  presage-backup.timer  presage-bot.service  presage-drift-detector.service  presage-drift-detector.timer  presage-serve.service
docs/: AGENT_HANDOFF.md  CANONICAL_MAP.md  CHANTIER_REDEVABILITY_LAYER.md  DECISION_QUALITY_ENGINE.md  DESIGN_SYSTEM.md  HANDLERS_INDEX.md  HANDOFF_2026-05-29.md  LESSONS.md  MACRO_GLOSSARY.md  PROCEDURES.md  PROJECT_DECORTIQUAGE_01_06.md  QUALITY_BAR.md  REFERENCE_SCHEMA.md  SOURCES.md  STAR_FEATURE.md  SWAP_0048_PREREQUIS.md  USER_KEYS_SETUP.md  absorption_roadmap.md  audit_panneaux_dashboard_2026-06-24.md  data_lineage.md  data_lineage.mermaid  failure_modes.md  glossary.md  handler-audit.md  j_day_reading_contract.md  migration_hetzner.md  migration_presage_pro.md  pipeline-coherence-audit.md  plan-week-of-may-19.md  presentation_contract_freshness_motion.md  research_brief_spec.md  risk_check_v2_roadmap.md  sentinels_g2_verification_2026-06-16.md  smoke_test_lock_in_2026-06-04.md  sprint-1.1-plan.md  sprint-1.2-plan.md  sprint-1.7-unification-candidates.md  sweep_targets_2026-06.md  thesis-candidates-queue.md
hermes/: README.md  __init__.py
integrity_anchors/: 2026-06-07.txt  predictions_ledger.jsonl  predictions_ledger.jsonl.ots  theses_ledger.jsonl  theses_ledger.jsonl.ots
intelligence/: adversarial_research_loop.py  analyze.py  analyze.py.preP25  asymmetry.py  audit_calibration.py  ballast_compute.py  base_rates.py  benchmark.py  benchmark_tracker.py  bias_events.py  bias_tagger.py  bias_track_record.py  book_anchored_scoring.py  bot_conceptions.py  bot_preferences.py  brier_audit.py  calendar.py  calibration_audit.py  card_inputs.py  card_steer.py  chat_intent.py  circuit_breaker.py  cluster_threshold_sweep.py  credibility.py  debate.py  debt_monitor.py  decision_anniversary.py  decision_copilot.py  digest.py  divergence_engine.py  divergence_schema.py  edgar_signal_wire.py  factor_exposures.py  (+70 more)
(+589 files in other folders)
